product title wrap andmin height to prevent container from blowing out

--- a/sites/all/themes/river_city_aquatics/scss/rca.scss
+++ b/sites/all/themes/river_city_aquatics/scss/rca.scss
@@ -124,6 +124,8 @@ h4 {
     h2 {
       font-size: 18px;
       margin-bottom: 8px;
+      max-width: 250px;
+      min-height: 60px;
     }
     .field-name-commerce-price {
       font-size: 18px;
